# togglr-sdk-python

./: .gitignore  CHANGELOG.md  Makefile  README.md  install_dev.sh  pyproject.toml  requirements.txt  setup.py
examples/: advanced_example.py  simple_example.py  tls_example.py
specs/: sdk.yml
tests/: __init__.py  test_client.py  test_config.py  test_context.py
togglr/: __init__.py  cache.py  cli.py  client.py  config.py  context.py  errors.py  track_event.py  version.py
