[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "togglr-sdk"
version = "1.0.0"
dependencies = [
  "httpx",
  "pydantic",
  "typing-extensions",
  "cachetools",
]
requires-python = ">=3.8"
authors = [
  {name = "Roman Chudov", email = "roman.chudov@gmail.com"},
]
maintainers = [
  {name = "Roman Chudov", email = "roman.chudov@gmail.com"},
]
description = "SDK for Togglr feature flags management system"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["sdk", "togglr", "feature-flag"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/togglr-project/togglr-sdk-python"
Documentation = "https://github.com/togglr-project/togglr-sdk-python"
Repository = "https://github.com/togglr-project/togglr-sdk-python.git"

[project.scripts]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
